# functional_programming

./: .gitignore  README.md  fp2025.cabal  package.yaml
app/: ClientMain.hs  ServerMain.hs
src/: Lib1.hs  Lib2.hs  Lib3.hs  Lib4.hs  highlight.js  styles.css
test/: Spec.hs
