cabal-version: 1.12

name:           fp2025
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      Lib1
      Lib2
      Lib3
      Lib4
  other-modules:
      Paths_fp2025
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , stm
    , strict
    , transformers
    , mtl
    , free
    , http-conduit
    , bytestring
    , scotty
    , wai
    , wai-extra
    , text
    , QuickCheck
  default-language: Haskell2010

executable fp2025-server
  main-is: ServerMain.hs
  other-modules:
      Paths_fp2025
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , fp2025
    , stm
    , scotty
    , wai-extra
    , text
    , transformers
    , bytestring
    , http-types
  default-language: Haskell2010

executable fp2025-client
  main-is: ClientMain.hs
  other-modules:
      Paths_fp2025
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , fp2025
    , free
  default-language: Haskell2010

test-suite fp2025-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_fp2025
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , fp2025
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , transformers
  default-language: Haskell2010
